play-recommendation/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-recommendation
spec:
  replicas: 0
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: play-recommendation
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: play-recommendation
        version: v1.0
        app.kubernetes.io/name: play-recommendation
    spec:
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - labelSelector:
#                matchExpressions:
#                  - key: app
#                    operator: In
#                    values:
#                      - play-recommendation
#              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: app
          image: 222222222222.dkr.ecr.ap-northeast-2.amazonaws.com/play-recommendation-prod
          resources:
            requests:
              cpu: "500m"
              memory: "768Mi"
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /
              port: 8090
            initialDelaySeconds: 30
            periodSeconds: 5
