play-recommendation/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: play-recommendation
  labels:
    app.kubernetes.io/name: play-recommendation
spec:
  ports:
    - port: 8090
      name: http
      targetPort: 8090
      nodePort: 30233
  selector:
    app.kubernetes.io/name: play-recommendation
  type: NodePort
